[backport] Tests should use -XX:+ShenandoahVerify in some OOM-evac configurations